<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >


    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
        android:title="@string/title_news"
        />
    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_summary" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_drive_eta_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_quiz" />
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/title_help"
        />

</menu>
